--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
         android:text="@string/init_time"
         android:textAlignment="center"
         android:textSize="32sp"
+        android:textStyle="bold"
+        android:textColor="@color/purple_500"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
